# codex-session-indexer

./: .gitignore  LICENSE  README.md  RELEASING.md  index.html  install.sh  pyproject.toml  uninstall.sh
src/codex_sessions/: __init__.py  cli.py  indexer.py  sync.py  watch.py
tests/: test_indexer.py
